--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 }
 body{
     background-color: rgb(236, 229, 229);
+    display: flex;
+    position: relative;
+    background-image:  linear-gradient(to left top, rgb(95, 95, 255), rgb(255, 97, 97));
 
 }
 
@@ -34,34 +37,44 @@ body{
 
 .container{
     position: relative;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    /* background-color: rgb(236, 229, 229); */
+    margin: auto;
+    width: 450px;
+
+    border-radius: 15px;
 
 }
 
 .dashboard{
-    top: 0;
+
     position: fixed;
-    width: 100%;
+    width: 450px;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #fff;
+    background-image:  linear-gradient(to left top, rgb(95, 95, 255), rgb(255, 97, 97));
+    border-radius: 15px 15px 0 0;
+
     padding-bottom: 10px;
+}
+h1{
+    margin: 10px ;
+    color: rgb(54, 32, 17);
+
 }
 
 .title{
-    margin: 20px ;
-    color: rgb(255, 154, 60);
+    margin: 10px;
+    color: rgb(54, 32, 17);
 }
 
+.title h2{
+    font-size: 20px;
+}
 .disk{
     /* display: flex; */
     /* margin: auto; */
-    width: 250px;
+    width: 200px;
 
 }
 .cd-thumb{
@@ -79,14 +92,16 @@ body{
     padding: 0px 15px;
     margin: 20px 0;
     font-size: 30px;
-    color: rgb(158, 157, 157);
+    color: rgb(80, 47, 25);
+
     cursor: pointer;
     
 
 }
 .toggle{
     font-size: 50px;
-    color: rgb(255, 122, 45);
+    color: rgb(80, 47, 25);
+
 }
 
 
@@ -105,7 +120,8 @@ body{
   }
 
 .playlist{
-    margin: 500px 16px 0;
+    margin: 16px;
+    margin-top: 480px;
 }
 
 .song{
@@ -115,10 +131,18 @@ body{
     border-radius: 5px;
     display: flex;
     align-items: center;
+    color: rgb(80, 47, 25);
+    font-size: 12px;
+
+}
+
+.song h2{
+    font-size: 18px;
 }
 
 .song.active{
-    background-color: rgb(255, 122, 45);
+    background-image:  linear-gradient(to left top, rgb(95, 95, 255), rgb(255, 97, 97));
+
     color: #fff;
 }
 .song.active .option{
@@ -126,10 +150,9 @@ body{
 }
 
 .thumbnail{
-    margin: 20px;
-    width: 65px;
-    height: 65px;
-    background-color: rgb(255, 137, 59);
+    margin: 15px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background-size: cover;
 }
@@ -137,12 +160,14 @@ body{
 .name{
     width: 200px;
     font-size: 18px;
+    flex: 1;
     /* margin: auto 0; */
 }
 
-.option{
+.option i {
     padding: 16px 8px;
-    color: #999;
+    color: rgb(252, 216, 206);
     font-size: 24px;
+    margin-right: 12px;
     
 }
